fix spacing issue & weird subheading

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -22,6 +22,9 @@
   z-index: 1100;
   border-right: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
 }
+.sitename {
+  padding-bottom: 40px;
+}
 
 .navigation.navigation-show {
   left: 0;
